Make the game functional on the website
Added buttons and displays for the game, the backend is fully operable.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <span id="player-buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </span>
+    <div id="results">
+        <p id="resultsPara"></p>
+    </div>
+    <span id="score">
+        <div>Human Score: <span id="human-score-value">0</span></div>
+        <div>Computer Score: <span id="computer-score-value">0</span></div>
+    </span>
+
+
     <script src="javascript.js"></script>
 </body>
 </html>
