Add header with css and change losing message

--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <span id="player-buttons">
+    <div id="header">
+        <h1 id="title">Rock Paper Scissors</h1>
+    </div>
+    <div id="player-buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
-    </span>
+    </div>
     <div id="results">
         <p id="resultsPara"></p>
     </div>
-    <span id="score">
+    <div id="score">
         <div>Human Score: <span id="human-score-value">0</span></div>
         <div>Computer Score: <span id="computer-score-value">0</span></div>
-    </span>
-
+    </div>
 
     <script src="javascript.js"></script>
 </body>
